// Generated by github.com/davyxu/tabtoy
// DO NOT EDIT!!
// Version: 3.1.4
syntax = "proto3";
package ConfigPB;


enum LocalizationModuleType
{	
	Global = 0; // 全局 
	UIHall = 1; // 大厅UI 
	Max = 2; // Max标记 
}

enum AdRewardType
{	
	AdRewardType_UndoLastMove = 0; // 撤销上一步 
	AdRewardType_AddStick = 1; // 增加一根柱子 
	AdRewardType_GetGem = 2; // 获得钻石 
}


message GlobalCfg
{ 
	string Key = 1; // 键 
	string StringValue = 2; // String值 
	int32 IntValue = 3; // Int值 
	repeated int32 IntArrValue = 4; // Int数组值 
	float FloatValue = 5; // Float值 
	int64 LongValue = 6; // Long值 
}

message Localization
{ 
	LocalizationModuleType ModuleType = 1; // 模块类型 
	string Key = 2; // Key 
	string ChineseSimplified = 3; // 简体中文 
	string English = 4; // 英文 
	string German = 5; // 德语 
	string French = 6; // 法语 
	string Italian = 7; // 意大利语 
	string ChineseTraditional = 8; // 繁体 
	string Korean = 9; // 韩语 
	string Thai = 10; // 泰语 
	string Vietnamese = 11; // 越南语 
	string Japanese = 12; // 日语 
	string Dutch = 13; // 荷兰语 
	string Spanish = 14; // 西班牙语 
	string Portuguese = 15; // 葡萄牙语 
	string Polish = 16; // 波兰语 
	string Ukrainian = 17; // 乌克兰语 
	string Russian = 18; // 俄罗斯语 
	string Indonesian = 19; // 印度尼西亚语 
}

message Sound
{ 
	string Id = 1; // 声音id 
	string AssetPath = 2; // 资源路径 
	bool IsMusic = 3; // 是否背景音乐 
	bool IsLoop = 4; // 是否循环 
	float Volume = 5; // 音量 
}

message Theme
{ 
	int32 ID = 1; // ID 
	string BGResPath = 2; // 背景资源路径 
	string IconResPath = 3; // Icon资源路径 
}

message Skin
{ 
	int32 ID = 1; // ID 
	string IconResPath = 2; // Icon资源路径 
}

message LevelAdReward
{ 
	AdRewardType RewardType = 1; // 奖励类型 
	repeated int32 addRewardCount = 2; // 添加数量 
}


// Combine struct
message Table
{	
	repeated GlobalCfg GlobalCfg = 1; // table: GlobalCfg 
	repeated LevelAdReward LevelAdReward = 2; // table: LevelAdReward 
	repeated Localization Localization = 3; // table: Localization 
	repeated Skin Skin = 4; // table: Skin 
	repeated Sound Sound = 5; // table: Sound 
	repeated Theme Theme = 6; // table: Theme 
}

