syntax = "proto3";
package Msg;

message NormalData{
    int32 goldCount = 1;//蓝币数量
    int32 currLevelId = 2;//当前关卡ID
    int32 nextSpecialLevelOpenId = 3;//下一个特殊关卡的开启ID
    repeated int32 unlockedBackGroundId = 4;//已解锁的背景ID
    int32 currSelectBackGroundId = 5;//当前选择的背景ID
    repeated int32 unlockedNutId = 6;//已解锁的螺母的ID
    int32 currSelectNutId = 7;//当前选择的螺母ID
}

message PlayerData{
    int64 userId = 1;
    string userDeviceId = 2;
    NormalData normalData = 3;
}